--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -16,6 +16,14 @@
             android:layout_gravity="center"
             android:text="内容页面"
             android:textSize="35dp" />
+
+        <TextView
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="右边内容"
+            android:textSize="35dp" />
     </FrameLayout>
 
     <LinearLayout
