--- a/app/src/main/res/layout/pager_loading.xml
+++ b/app/src/main/res/layout/pager_loading.xml
@@ -5,10 +5,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="加载中..."
-        android:textSize="50dp" />
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 </LinearLayout>
